@@ -4,6 +4,7 @@ postgresql-12 (12~beta4-1) UNRELEASED; urgency=medium
   * Drop plpython(2) package; python 2 is EOL.
   * Move plperl bitcode files to plperl package.
   * Move plpython mo files to plpython3 package.
+  * rules: Remove stamp files logic.
 
  -- Christoph Berg <myon@debian.org>  Tue, 10 Sep 2019 14:11:47 +0200
 
